--- a/xoso-danchoi.html
+++ b/xoso-danchoi.html
@@ -90,9 +90,10 @@ body {
     padding: 0 12px;
     color: rgba(255,255,255,0.7);
     background-color: rgba(255,255,255,0.1);
-    border: 1px solid rgba(255,255,255,0.3);
+    border: 1px solid rgba(255,255,255,0.5);
   }
   .btn-delete.disabled {
+    border-color: rgba(255,255,255,0.3);
     opacity: 0.3;
     pointer-events: none;
   }
@@ -126,8 +127,10 @@ color: #636363;
   border: 1px solid rgba(255,255,255,0.3);
   border-radius: 5px;
 }
-  
-  input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button {
+input.numberInput:focus {
+  border: 1px solid #B6407D;
+}  
+input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button {
 -webkit-appearance: none;
 margin: 0;
 }
