đổi domain .com

--- a/xoso-danchoi.html
+++ b/xoso-danchoi.html
@@ -328,8 +328,8 @@ animation: l13 1s infinite linear;
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script> 
 <script>
     $(document).ready(function () {
-      const cityApiUrl = "https://lode88.ai/api/v1/lode/cities";
-      const resultApiUrl = "https://lode88.ai/api/v1/lode/results";
+      const cityApiUrl = "https://lode88.com/api/v1/lode/cities";
+      const resultApiUrl = "https://lode88.com/api/v1/lode/results";
       const inputNumber = $(".numberInput");
       
       
