--- a/xoso-danchoi.html
+++ b/xoso-danchoi.html
@@ -328,7 +328,7 @@ animation: l13 1s infinite linear;
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script> 
 <script>
     $(document).ready(function () {
-      const domains = ["https://lode88.ai", "https://lode88.us", "https://lode88.online", "https://lode88.vip"];
+      const domains = ["https://lode88.ai", "https://lode88.com", "https://lode88.us", "https://lode88.online", "https://lode88.vip"];
       const cityApiUrl = "/api/v1/lode/cities";
       const resultApiUrl = "/api/v1/lode/results";
       const inputNumber = $(".numberInput");
